/*************************************************************************
 * 
 * Poorvika CONFIDENTIAL
 * __________________
 * 
 *  2009 - 2020 Poorvika Systems Incorporated 
 *  All Rights Reserved.
 * 
 * NOTICE:  All information contained herein is, and remains
 * the property of Poorvika Systems Incorporated and its suppliers,
 * if any.  The intellectual and technical concepts contained
 * herein are proprietary to Poorvika Systems Incorporated
 * and its suppliers and are protected by trade secret or copyright law.
 * Dissemination of this information or reproduction of this material
 * is strictly forbidden unless prior written permission is obtained
 * from Poorvika Systems Incorporated.
 */
export default {

    screenname: {
        mobile: 'mobile',
        home: 'home',
        productinfo: 'productinfo',
        more: 'more',
        search: 'overlay',
        preview: 'preview',
        moreproducts: 'moreproducts',
        description: 'description',
        review: 'review',
        writereview: 'writereview',
        overlay: 'overlay',
        cart: 'cart',
        favourite: 'favourite',
        searchcategory: 'searchcategory',
        login: 'login',
        register: 'Register',
        account: 'Account',
        forgotPassword: 'ForgotPassword',
        otp: 'Otp',
        checkout: 'Checkout',
        payments: 'Payments',
        changepassword: 'Change Password'
    },
    home: {
        greeting: 'Hi!',
        connection_error: 'No Internet connection',
        mobile: 'Mobile',
        gadgets: 'Gadgets',
        tv: 'TV',
        tablets: 'Tablets',
        emergingmodels: 'EMERGING MODELS',
        latestlaunches: 'LATEST LAUNCHES',
        homeentertainment: 'HOME ENTERTAINMENT',
        fitband: 'FITBAND',
        trendinggadget: 'TRENDING GADGETS',
        shopbybrand: 'SHOP BY BRAND',
        more: 'MORE'
    },
    productdetails: {
        writereview: 'Write Your Review',
        share: 'Share',
        favourite: 'Favourite',
        description: 'View Description',
        ratedby: 'RATED BY',
        viewmore: 'View more',
        keyfeatures: 'Key Features',
        readall: 'Read all Reviews',
        addtocart: 'ADD TO CART',
        buynow: 'BUY NOW',
        added: 'GOTO CART'
    },
    category: {
        fav: 'Favourite',
        checkout: 'Proceed to Checkout',
        incgst: 'Order Total (incl.GST)',
        comparenow: 'Compare Now',
        compare: 'Compare',
        filter: 'Filter',
        ratelow: 'Rating (Lowest)',
        ratehigh: 'Rating (Highest)',
        pricelow: 'Price - Low to High',
        pricehigh: 'Price - High to low',
        namedes: 'Name Z - A',
        nameasc: 'Name A - Z',
        noitem: 'No Items Added',
        compareerror: ' You can compare only 2 products',
        remove: 'Remove',
        sort: 'Sort'
    },
    cart: {
        checkout: 'Proceed to Checkout',
        fav: 'WISHLIST',
        remove: 'REMOVE'
    },
    more: {
        shop: 'Shop by Category',
        storelocator: 'Store Locator',
        login: 'Login',
        mywishlist: 'My Wishlist',
        myaccount: 'My Account',
        myorder: 'My Orders',
        privilege: 'Poorvika Privilege program',
        rewards: 'My Rewards',
        feedback: 'Feedback',
        moresetting: 'More',
        logout: 'Logout',
        searchcategory: 'searchcategory'
    },
    login: {
        loginaccount: 'Login your Account',
        emailmobilenumber: 'Email / Mobile number',
        password: 'Password',
        emailmobileplaceholder: 'Enter Email/Mobile number',
        passwordplaceholder: 'Enter Password',
        valid_email_mobileno: 'Please enter valid Email / Mobile number',
        forgotpassword: 'Forgot Password?',
        registernow: ' Register Now',
        donthaveaccount: 'Don\'t have an account? ',
        getotp: 'Request OTP',
        or: 'OR',
        login: 'Login',
        valid_input: 'Please enter valid input',
        login_fail: 'Login failed',
        password_length_valid: 'Password must be at least 5 characters long',
        empty_valid: 'This field is required',
        register_fail: 'Register failed',
        valid_name: 'Please enter valid name',
        valid_name_length: 'Name must be at least 3 characters long',
        valid_email: 'Please enter valid email',
        valid_mobileno: 'Please enter valid phone number',
        valid_mobileno_length: 'Please enter valid phone number'
    },
    register: {
        createaccount: 'Create your account on Poorvika',
        name: 'Name',
        email: 'Email',
        phonenumber: 'Phone number',
        register: 'Register',
        empty_valid: 'This field is required',
        register_fail: 'Register failed',
        valid_input: 'Please enter valid input',
        valid_name: 'Please enter valid name',
        valid_name_length: 'Name must be at least 3 characters long',
        valid_email: 'Please enter valid email',
        valid_mobileno: 'Please enter valid phone number',
        valid_mobileno_length: 'Please enter valid phone number'
    },
    forgotPassword: {
        forgotpasswordhead: 'Forgot Password',
        newpassword: 'New Password',
        reenterpassword: 'Re-enter Password',
        change: 'Change',
        empty_valid: 'This field is required',
        password_not_match:'New and Reenter Password does not match'
    },
    changePassword: {
        changepasswordhead: 'Change Password',
        newpassword: 'New Password',
        reenterpassword: 'Re-enter Password',
        oldpassword:'Old Password',
        change: 'Change',
        empty_valid: 'This field is required',
        changePassword_fail: 'Change Password failed',
        password_not_match:'New and Confirm Password not match',
        password_length_valid: 'Password must be at least 5 characters long',
        changePassword_success: 'Password is changed successfully'
    },
    otp: {
        verifyotp: 'Please enter the OTP sent to',
        verify: 'Verify OTP',
        resendotp: 'Resend OTP'
    },
    account: {
        address: 'Address',
        profile: 'Profile',
        account_name: 'Name',
        account_email: 'Email',
        account_mobileno: 'Mobile Number',
        account_balance: 'Your Balance',
        changepassword: 'Change Password',
        add_new_address: '+  ADD NEW ADDRESS',
        edit: ' Edit',
        update: 'Update',
        delete: ' Delete',
        delete_fail:'Delete Fail',
        delete_success: 'Address deleted successfully'
    },
    address: {
        name: 'First Name',
        lastname: 'Last Name',
        phonenumber: 'Phone number',
        address1: 'Address 1',
        address2: 'Address 2',
        pincode: 'Pincode',
        city: 'City',
        state: 'State',
        country: 'Country',
        continue: 'Continue',
        update_fail: 'Update address failed',
        update_success: 'Update address Successfully',
        add_fail: 'Add address failed',
        add_success: 'Add address Successfully',
        selectcountry: 'Select Country',
        selectstate: 'Select State',
        empty_valid: 'This field is required',
        valid_name: 'Please enter valid name',
        valid_name_length: 'Name must be at least 3 characters long',
        valid_mobileno: 'Please enter valid phone number',
        all_empty:'Please enter all the fields'
    },
    checkout: {
        continue: 'Continue',
        addnewaddress: 'ADD NEW ADDRESS',
        subtotal: 'Sub-Total',
        costofshipping: 'Cost of Shipping',
        total: 'Total',
        youritem: 'YOUR ITEM',
        edit: ' Edit',
        delete: ' Delete'
    },
    payments : {
        subtotal: 'Sub-Total',
        costofshipping: 'Cost of Shipping',
        total: 'Total',
        continue: 'Continue',
    },
    
    didnotgetotp: 'Didn\'t get the OTP? ',
    oldpassword: 'Old Password',
    submit: 'SUBMIT',
    name: "Name",
    writereview: 'Write Review'
};
