...
        const isSuccess = loginResponse.success
        if (isSuccess == 1) {
         // console.log('success')
          setTimeout(async () => {
            dispatch({
              type: 'login',
              username: username,
              status: true,
            })
            dispatch({
              type: 'removeallcart'
            });
            await AsyncStorage.removeItem('cartitems');
...
                <Text style={styles.register}>
                  {I18n.t('login.forgotpassword')}
                </Text>
              </TouchableOpacity>
            </View>

            <View testID="loginview" style={styles.loginformbutton}>
              <Button
                style={styles.buttonwidth}
                labelStyle={styles.buttonlabel}
                label={I18n.t('login.login')}
                testID="homebutton"
                onPress={
                  () => {
                    signInClicked()
                  }
                }
                backgroundColor={COLOR.THEME}
...
