...
    }

    return (
        <View paddingB-10 bg-white>
            <View style={{ height: 50, flexDirection: 'row', justifyContent: 'space-between', alignItems: 'center' }}>
                <View flex row paddingL-20 style={{ justifyContent: 'flex-start' }}>
                    <TouchableWithoutFeedback testID='gobackfromheader' onPress={() => {
                        Navigation.pop(props.componentId)
                    }}>
                        <View flex row style={{ justifyContent: 'flex-start', alignItems: 'center' }}>
                            <Icon type='font-awesome' name="angle-left" size={30} color={Colors.orange10} />
                            <Text text60 orange10 marginL-5></Text>
                        </View>
...
                </View>

                <Text text60 numberOfLines={1} green10 marginL-20>
                </Text>
                <View flex row marginR-10 marginR-20 style={{ justifyContent: 'flex-end', alignItems: 'center' }}>
                    <View center marginT-2>
                        <TouchableWithoutFeedback testID='cartview' onPress={_cartView}>
                            {
                                (cartarray.length > 0) ?
                                    <CartIcon type="feather" name="shopping-cart" size={25} color='#9B9B9B' /> :
                                    <Icon
                                        name="shopping-cart"
                                        type='feather'
...
